2009.Mar.12 (svn.debian.org/tux4kids - revision 937)
Version 1.7.2
        Build- some minor tweaks to tuxmath.desktop and specfiles.
        Doc - update of README, INSTALL for new release

	David Bruce <davidstuartbruce@gmail.com>

2009.Mar.06 (svn.debian.org/tux4kids - revision 929)
        Text drawing - SDL_extras revamp done, AFAIK - supports resetting of font
        sizes and run-time changing of fonts (new field added to options struct
        for current font name). 

	David Bruce <davidstuartbruce@gmail.com>

2009.Mar.04 (svn.debian.org/tux4kids - revision 922)
        Text drawing - implemented Set_SDL_Pango_Font_Size() in SDL_extras.c so
        that BlackOutline() e.g. now use the font size argument, albeit still with
        a slight hack.

	David Bruce <davidstuartbruce@gmail.com>

2009.Mar.03 (svn.debian.org/tux4kids - revision 919)
        i18n - marking of some additional strings in campaign.c and credits.c for
        translation.

	David Bruce <davidstuartbruce@gmail.com>

2009.Mar.03 (svn.debian.org/tux4kids - revision 918)
        Text drawing - all of text drawing now encapsulated within SDL_extras.
        Other code no longer has any SDL_ttf-specific data or includes. Tuxmath no
        longer depends on any specific fonts as long as SDL_Pango is available.

	David Bruce <davidstuartbruce@gmail.com>

2009.Feb.28 
        Text drawing - as all of this is handled by functions within SDL_extras,
        there isn't any need for code elsewhere in the program to have to know 
        about TTF fonts - changed BlackOutline() to take int size parameter instead
        of a TTF_Font* parameter. With a little more work we can confine all mention
        of SDL_Pango/SDL_ttf to within SDL_extras. When this is done, we will not
        have any dependencies on specific fonts (or need to bundle them) whenever
        SDL_Pango is available.

	David Bruce <davidstuartbruce@gmail.com>

2009.Feb.28 