@@ -1,3 +1,10 @@
+2009.Jul.03 (svn.debian.org/tux4kids - revision 1141)
+        LAN project - basic TCP/IP server and test client implemented in branches/lan.
+        The client and server provide multiplayer command-line tuxmath over tcp.
+
+        Akash Gangil <akashg1611@gmail.com>
+	David Bruce <davidstuartbruce@gmail.com>
+
 2009.Mar.12 (svn.debian.org/tux4kids - revision 937)
 Version 1.7.2
         Build- some minor tweaks to tuxmath.desktop and specfiles.
